# controleLuz

./: README.md
tapo/: Cargo.toml  logs.txt
tapo/examples/: experimento.rs  f.rs  s.rs  tapoVERDE.py  tapoVerde.rs  ws.rs
