[package]
name = "tapo"
version = "0.7.17"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "Unofficial Tapo API Client. Works with TP-Link Tapo smart devices. Tested with light bulbs (L510, L520, L530, L535, L610, L630), light strips (L900, L920, L930), plugs (P100, P105, P110, P115), power strips (P300, P304), hubs (H100), switches (S200B) and sensors (KE100, T100, T110, T300, T310, T315)."
keywords = ["IOT", "tapo", "smart-home", "smart-bulb", "smart-plug"]
categories = ["hardware-support", "embedded", "development-tools"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/tapo"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
# inputbot = "0.6.0" # Removido, não utilizado
chrono = { workspace = true, default-features = false, features = [
    "clock",
    "serde",
] }
itertools = "0.13"
lazy_static = "1.5"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "json",
] }
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde_json = { workspace = true }
serde_with = "3.11"
thiserror = "2.0"
tokio = { workspace = true, default-features = false, features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
] }
uuid = { version = "1.16", features = ["serde", "v4"] }

# WebSocket support
tokio-tungstenite = "0.17"

# URL Parsing
url = "2.3"

# Security
aes = "0.8"
base16ct = { version = "0.2", features = ["alloc"] }
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
rsa = "0.9"
sha1 = "0.10"
sha2 = "0.10"

# FFI
pyo3 = { workspace = true, features = ["serde", "chrono"], optional = true }

# For parallel execution
futures = "0.3"

# Adicionado o crate windows para capturar eventos de teclado
windows = { version = "0.48.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

# Adicionado o crate crossterm para captura de eventos de teclado
crossterm = "0.25" # Verifique a última versão disponível no [crates.io](https://crates.io/crates/crossterm)

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
